# MIPT_offline_recsys

./: .gitignore  README.md  pyproject.toml
dags/: cleanup_dag.py  dynamic_training_dag.py  error_handling_dag.py  hello_docker_dag.py  popular_age_dag.py  popular_age_dag_template.py  popular_dag.py
dags/solutions/: popular_age_dag.py
infra/: .env  docker-compose.airflow.yml  docker-compose.mlflow.yml  docker-compose.qdrant.yml  docker-compose.redis.yml  docker-compose.triton.yml  mlflow.Dockerfile
infra/triton_models/catboost_reranker/: config.pbtxt
infra/triton_models/catboost_reranker/1/: model.py
offline/src/app/: Dockerfile.splitter  config_ab.yaml
offline/src/dags/: cleanup_dag.py  dynamic_training_dag.py  error_handling_dag.py  popular_age_dag_template.py
offline/src/dags/examples/: advanced_popular_dag.py
offline/src/dags/solutions/: popular_age_dag.py
offline/src/notebooks/: data.ipynb  redis_explore.ipynb
online/src/app/: Dockerfile  main.py
online/src/app/deploy/: docker-compose.yml
online/src/load_test/: compare_endpoints.js  load_test.js
online/src/notebooks/: mlflow_demo.ipynb  qdrant_ann.ipynb  train_als.ipynb  train_reranker.ipynb
src/: load_popular_age_to_redis.py  load_popular_to_redis.py  popular.py  popular_age.py
src/app/: Dockerfile  config_ab.yaml  main.py  splitter.py
src/app/deploy/: docker-compose.yml
src/app/logs/: ab_log.csv
src/notebooks/: data.ipynb
