[project]
name = "mipt-offline-recsys"
version = "0.1.0"
description = ""
authors = [
    {name = "Pimanov Daniil",email = "pimanov.d@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
